chore: add notes about params space

--- a/zytuneopt_report.tex
+++ b/zytuneopt_report.tex
@@ -9,7 +9,7 @@
 
 
 \begin{document}
-\title{Пояснительная записка\\{\large к модулю подбора метаконфигураций решателя SCIP \\для MILP-проблем с <<короткой итерацией>>}}
+\title{Пояснительная записка\\{\large к модулю подбора метаконфигурации решателя SCIP \\для MILP-проблем с <<короткой итерацией>>}}
 
 \author{\itshape Подвойский А.О}
 
@@ -29,40 +29,54 @@
 
 Подбор стратегии поиска решения и гиперпараметров решателя имеет смысл только для MILP-проблем с <<короткой итерацией>>, то есть для проблем, у которых полное время поиска решения не превосходит некоторого порога времени, считающегося приемлемым временем ожидания (например, 30 секунд).
 
-Запуск решателя SCIP с различными комбинациями параметров выполняется параллельно. Фиксируется время поиска решения до достижения заданного значения зазора и значение целевой функции.
+Запуск решателя SCIP с различными комбинациями параметров выполняется параллельно. 
 
 Результаты сводятся в таблицу со следующими полями:
-\begin{itemize}
-	\item наименование проблемы (\verb|problem_name|),
+\begin{enumerate}
+	\item наименование проблемы (\verb|problem_name|, \verb|<string>|),
 	
-	\item количество бинарных переменных до пресолвинга (\verb|n_bin_vars_before_presolving|),
+	\item наименование стратегии поиска решения (\verb|strategy_name|, \verb|<string>|),
 	
-	\item количество целочисленных переменных до пресолвинга (\verb|n_int_vars_before_presolving|),
+	\item количество бинарных переменных до пресолвинга (\verb|n_bin_vars_before_presolving|, \verb|<int>|),
 	
-	\item количество вещественных переменных до пресолвинга (\verb|n_cont_vars_before_presolving|),
+	\item количество целочисленных переменных до пресолвинга (\verb|n_int_vars_before_presolving|, \verb|<int>|),
 	
-	\item количество ограничений до пресолвинга (\verb|n_conss_before_presolving|),
+	\item количество вещественных переменных до пресолвинга (\verb|n_cont_vars_before_presolving|, \verb|<int>|),
 	
-	\item количество бинарных переменных после пресолвинга (\verb|n_bin_vars_after_presolving|),
+	\item количество ограничений до пресолвинга (\verb|n_conss_before_presolving|, \verb|<int>|),
 	
-	\item количество целочисленных переменных после пресолвинга (\verb|n_int_vars_after_presolving|),
+	\item количество бинарных переменных после пресолвинга (\verb|n_bin_vars_after_presolving|, \verb|<int>|),
 	
-	\item количество вещественных переменных после пресолвинга (\verb|n_cont_vars_after_presolving|),
+	\item количество целочисленных переменных после пресолвинга (\verb|n_int_vars_after_presolving|, \verb|<int>|),
 	
-	\item количество ограничений после пресолвинга (\verb|n_conss_after_presolving|),
+	\item количество вещественных переменных после пресолвинга (\verb|n_cont_vars_after_presolving|, \verb|<int>|),
 	
-	\item группа гиперпараметров снижения размерности задачи (\verb|group_presolving|); допустимые значения \verb|default|, \verb|aggressive| и \verb|fast|,
+	\item количество ограничений после пресолвинга (\verb|n_conss_after_presolving|, \verb|<int>|),
 	
-	\item группа гиперпараметров решения проблемы в релаксированной постановке (\verb|group_relax_method|),
+	\item группа гиперпараметров снижения размерности задачи (\verb|group_presolving|, \verb|<string>|); допустимые значения \verb|default|, \verb|aggressive| и \verb|fast|,
 	
-	\item группа гиперпараметров адаптации проблемы (\verb|group_adaptation_problem|),
+	\item группа гиперпараметров решения проблемы в релаксированной постановке (\verb|group_relax_method|, \verb|<string>|); допустимые значения \verb|simplex|, \verb|primal_simplex|, \verb|dual_simplex|, \verb|barrier|,
 	
-	\item группа гиперпараметров точности решения (\verb|group_tol|)
-\end{itemize}
+	\item группа гиперпараметров ветвления и разрешения конфликтов по бинарным переменным (\verb|group_preferbinary|, \verb|<bool>|); допустмые значения: \verb|TRUE| или \verb|FALSE|,
+	
+	\item группа гиперпараметров адаптации проблемы (\verb|group_adaptation_problem|, \verb|<string>|); допустимые значения: \verb|easycip|, \verb|feasibility|, \verb|optimality|, \verb|hardlp|, \verb|numerics|, \verb|off|,
+	
+	\item группа гиперпараметров снижения точности решения (\verb|group_reduced_tol|, \verb|<bool>|); допустимые значения: \verb|TRUE| или \verb|FALSE|,
+	
+	\item полное время расчета (\verb|total_time|, \verb|<float>|),
+	
+	\item значение целевой функции (\verb|objective|, \verb|<float>|),
+	
+	\item значение зазора (\verb|gap|, \verb|<float>|).
+\end{enumerate}
+
+Таким образом, получается 288 комбинаций значений гиперпараметров для одной стратегии поиска решения (для машины с 4 физическими ядрами, одной стратегии поиска решения и средней продолжительности работы решателя на одной проблеме 1 минута, время работы модуля составляет 72 минуты).
+
+На базе получившейся сводной таблицы можно собрать финальную метаконфигурацию решателя и применить ее к другим проблемам рассматриваемого семейства.
 
 \section{Предложения по формированию пространства гиперпараметров решателя}
 
-Не все гиперпараметры решателя имеет смысл подбирать <<изолировано>>. К примеру, следующий набор гиперпараметров с указанными значениями имеет смысл только для \emph{агрессивного пресолвинга}
+Решатель SCIP 8.0.3 в общей сложности поддерживает 2729 параметров. Рассмотреть все возможные комбинации параметров вычислительно не осуществимо. Кроме того не все гиперпараметры решателя следует подбирать <<изолировано>>. К примеру, следующий набор гиперпараметров с указанными значениями имеет смысл только для \emph{агрессивного пресолвинга}
 \begin{lstlisting}[
 style = bash,
 numbers = none
@@ -166,7 +180,7 @@ lp/initalgorithm = s'implex  # default
 randomization/lpseed = 0  # default
 \end{lstlisting}
 
-    \item \emph{Группа гиперпараметров ветвления и разрешения конфликтов}
+    \item \emph{Группа гиперпараметров ветвления и разрешения конфликтов по бинарным переменным}
 \begin{lstlisting}[
 style = bash,
 numbers = none
@@ -464,6 +478,8 @@ branching/relpscost/inititer = 10
 separating/maxrounds = 1
 separating/maxroundsroot = 5
 \end{lstlisting}
+
+    \item \verb|numerics|
     \end{itemize}
     \item \emph{Группа гиперпараметров точности решения (для численно нестабильных проблем)}
 \begin{lstlisting}[
@@ -476,6 +492,12 @@ numerics/epsilon = 1e-07
 numerics/sumepsilon = 1e-05
 \end{lstlisting}
 \end{enumerate}
+
+\remark{
+Как показывают вычислительные эксперименты на проблемах с <<короткой итерацией>> поиск подгруппы первичных эвристик низкой эффективности не дает ощутмого прироста, а в большинстве случаев значительно снижает производительность. По этой причине первичные эвристики не принимают участи в подборе метаконфигурации решателя
+}
+
+
 
 
 
